# jupyter-book-2-demo

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE.md  Makefile  README.md  environment.yml  myst.yml  pyproject.toml
.github/workflows/: deploy_book.yml
docs/: authors.yml  banner.md  custom-footer.md  footer.md
docs/_static/: custom.css  navbar_end.md
notebooks/: 01_get_data.ipynb  02_get_stations_data.ipynb  03_eda.ipynb
references/: 00_intro.md  01_background.md
