# ============================== Project metadata ==============================

[project]
name = "bike-share"
version = "0.1.0"
description = "Demo project that creates Jupyter Book from all notebooks."
authors = [{name = "edesz"}]
requires-python = ">= 3.10"
# These are the PyPI dependencies, added with: pixi add --pypi PACKAGE_NAME
dependencies = []

[tool.pixi.workspace]
channels = ["https://prefix.dev/conda-forge"]
platforms = ["linux-64"]

# location where the build tool should find custom modules to be tested
[tool.setuptools.packages.find]
where = ["src"]

# ============================= Conda dependencies =============================

[tool.pixi.dependencies]
python = "3.12.10.*"
# use pyarrow from conda-forge in order to get required C dependencies
numpy = ">=2.4.3,<3"
pyarrow = ">=24.0.0,<25"
pandas = ">=3.0.2,<4"
vegafusion = ">=2.0.3,<3"
altair = ">=6.1.0,<7"
vl-convert-python = ">=2.0.0rc1,<3"

# ================== Make this project available as a package ==================

[tool.pixi.pypi-dependencies]
bike-share = { path = ".", editable = true }

# ========= Specify non-essential dependencies in features ========

[tool.pixi.feature.notebooks.dependencies]
# create a notebooks feature for exploration
nbclassic = ">=1.3.3,<2"
ipykernel = ">=7.2.0,<8"
ipywidgets = ">=8.1.8,<9"
jupyterlab = ">=4.5.6,<5"
jupyterlab-myst = ">=2.6.0,<3"
jupysql = ">=0.11.1,<0.12"
jupytext = ">=1.19.1,<2"
jupyter_server_ydoc = ">=2.3.0,<3"
jupyter_server_fileid = ">=0.9.2,<0.10"
jupyter-ruff = ">=0.3.1,<0.4"
nbconvert = ">=7.17.1,<8"
panel = ">=1.8.10,<2"
toml = ">=0.10.2,<0.11"

[tool.pixi.feature.jupyterbook.dependencies]
# create a Jupyter Book feature
jupyter-book = ">=2.1.4,<3"

# ========= Specify non-essential dependencies in environments ========

[tool.pixi.environments]
# create environments that use features created above
default = { solve-group = "default" }
# notebooks env inherits default feature and notebooks feature to run jlab
notebooks = { features = ['default', "notebooks"], solve-group = "notebooks" }
jbook = { features = ["default", "jupyterbook"], solve-group = "jbook" }

# ========================== Define tasks (shortcuts) ==========================

[tool.pixi.feature.notebooks.tasks]
# run development tasks for the notebooks feature
jlab = { cmd = """
    jupyter lab""", depends-on = [], description="""\
    Launch Jupyterlab\
    """, default-environment = "notebooks" }

[tool.pixi.feature.jupyterbook.tasks]
# run tasks for the jupyterbook feature
jb-build = { cmd = """
    jupyter book build
    """, description="""\
    Build Jupyter Book\
    """, default-environment = "jbook" }
jb-start = { cmd = """
    jupyter-book start
    """, description="""\
    Start Jupyter Book Server\
    """, default-environment = "jbook" }
jb-clean = { cmd = """
    jupyter-book clean
    """, description="""\
    Clean Jupyter Book artifacts\
    """, default-environment = "jbook" }
jb-init-gh-pages = { cmd = """
    jupyter-book init --gh-pages
    """, description="""\
    Create a GitHub Action to deploy Jupyter Book\
    """, default-environment = "jbook" }
